# skills-test

./: .gitignore  AGENTS.md  README.md  README_EVAL_TEST.md  agent.py  build_olmo_yaml.md  fastagent.config.yaml  pyproject.toml  regrade_runs.py  test_eval_assertions.py
dev/: build_eval.json  regrade_runs.py  summarize_runs.py
legacy/runs-skill-v1/: regraded_results.csv
runs/: regraded_results.csv  results.csv
runs-skill-v1/2025_11_28_15_04/run_9/: conversation.json
runs-skill-v1/2025_11_28_15_10/run_1/: olmo_7b_evaluations.yaml
runs-skill-v1/2025_11_28_15_10/run_4/: conversation.json
runs-skill-v1/2025_11_28_15_10/run_5/: conversation.json
runs-skill-v1/2025_11_28_15_10/run_8/: conversation.json
runs-skill-v1/2025_11_28_15_10/run_9/: conversation.json
runs-skill-v1/2025_11_28_15_15/run_10/: olmo_7b_evaluations.yaml
runs-skill-v1/2025_11_28_15_15/run_3/: conversation.json
runs-skill-v1/2025_11_28_15_15/run_4/: clean_yaml.py
runs-skill-v1/2025_11_28_15_15/run_6/: conversation.json
runs-skill-v1/2025_11_28_15_15/run_7/: conversation.json
runs-skill-v1/2025_11_28_15_15/run_9/: conversation.json
runs-skill-v1/2025_11_28_15_23/run_5/: conversation.json
runs-skill-v1/2025_11_28_15_23/run_6/: olmo_7b_evaluations.yaml
runs-skill-v1/2025_11_28_15_23/run_9/: conversation.json
runs-skill-v1/2025_11_28_15_28/run_4/: olmo_7b_evaluations.yaml
runs-skill-v1/2025_11_28_15_28/run_5/: conversation.json  full_evals.yaml
runs/2025_11_28_15_04/run_1/: conversation.json
runs_pre_column_index_change/: regraded_results.csv
scripts/: comparison_chart.py
(+379 files in other folders)
